# audio

./: .gitignore  Makefile
.github/workflows/: deploy.yml
drums/: README.md  app.py  requirements.txt
inspect/: README.md  app.py  pyproject.toml  requirements.txt
mcp/: app.py  requirements.txt  server.py
mcp/AbletonMCP/: __init__.py
midi/: README.md  app.py  requirements.txt  setup.sh
patch/: README.md  app.py  requirements.txt
slice/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
slice/patches/: dinat.py
stems/: README.md  app.py  requirements.txt
voice/: .gitattributes  .gitignore  README.md  app.py  core.py  requirements.txt
voice/tabs/settings/sections/: presence.py
